:bulb: docs-code: added some todo comments to the main style sheet to guide myself

--- a/style/application.scss
+++ b/style/application.scss
@@ -1021,3 +1021,18 @@ iframe {
     display: none;
   }
 }
+
+/**
+ * NOTA: Sobreescrevendo os estilos da página!!!
+ *
+ * TODO: Ainda preciso debugar o arquivo pra por cada modificação no lugarzinho
+ * certo, acumular os estilos assim não é uma boa prática.
+ */
+
+// TODO: Extrair a paleta de cores do blog e salvar em variáveis
+
+// TODO: Mudar a cor dos links de cada título na homepage e tirar a underline
+// TODO: Adicionar um hover pra esses cards que coloca um underline simples na cor certa
+
+// TODO: Fazer o back-to-top-button ter o background branco por padrão
+// TODO: Mudar o background pra escuro e a borda pra branca no hover
