--- a/style/application.scss
+++ b/style/application.scss
@@ -1,5 +1,8 @@
-@import "normalize-scss";
-@import 'bootstrap/scss/bootstrap';
+// @import "normalize-scss";
+// @import 'bootstrap/scss/bootstrap';
+
+@import "normalize";
+@import "bootstrap";
 
 @-ms-viewport {
   width: device-width;
@@ -1029,7 +1032,9 @@ iframe {
  * certo, acumular os estilos assim não é uma boa prática.
  */
 
-// TODO: Extrair a paleta de cores do blog e salvar em variáveis
+$prim: #4e4848;      // cor escura, tema do blog
+$bg: white;          // cor mais clara, cor do fundo
+$secc-alt: #e6e6e6;  // cor dos cards
 
 // TODO: Mudar a cor dos links de cada título na homepage e tirar a underline
 // TODO: Adicionar um hover pra esses cards que coloca um underline simples na cor certa
