:pencil2: typo: renamed the $secc-alt variable to be $bg-alt

--- a/style/application.scss
+++ b/style/application.scss
@@ -1032,9 +1032,9 @@ iframe {
  * certo, acumular os estilos assim não é uma boa prática.
  */
 
-$prim: #4e4848;      // cor escura, tema do blog
-$bg: white;          // cor mais clara, cor do fundo
-$secc-alt: #e6e6e6;  // cor dos cards
+$prim: #4e4848;    // cor escura, tema do blog
+$bg: white;        // cor mais clara, cor do fundo
+$bg-alt: #e6e6e6;  // cor dos cards
 
 a         { text-decoration: none; }
 a:active  { text-decoration: none; }
