:bulb: docs-code: added some more todos, just things that is possible to do with plain css

--- a/style/application.scss
+++ b/style/application.scss
@@ -1058,3 +1058,10 @@ a:visited { text-decoration: none; }
 		border-color: $bg;
 	}
 }
+
+// TODO: Muda a cor das tags, pra ficarem parecidas com a do título
+// TODO: Adicionar o mesmo efeito de hover nelas
+
+// TODO: Adicionar um espaçamento maior entre os posts, por mês
+// TODO: (mobile) Dar uma margem inferier bem grande pro #up-button ficar clicável
+// TODO: Nas listas no menu de explorar, deixar a linha inferior mais próxima do texto
